* fix new messages in thread view are not visible because of wrong default color

--- a/dark-theme.css
+++ b/dark-theme.css
@@ -4587,6 +4587,10 @@ a.c-member_slug, .c-member_slug--link, .c-mrkdwn__subteam--link {
   background: var(--main-bg-color);
 }
 
+.p-threads_view_reply--new_reply {
+  background: var(--main-highlight);
+}
+
 .p-threads_view__divider_label {
   background: var(--main-bg-color);
 }
